# Reduced_ARAP_Deformation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: ARAP.h  call_back.h  dynamic_arap.h  energy.h  global_var.h  helper_algebra.h  helper_geometry.cpp  helper_geometry.h  helper_init.h  main.cpp  reduced_energy.h
